[metadata]
name = redis-cache-lock
version = attr:redis_cache_lock.__version__
description = Synchronizing cache generation to reduce work
long_description = file:README.rst
long_description_content_type = text/x-rst
url = https://gitlab.com/hoverhell/redis-cache-lock/
author = HoverHell
author_email = hoverhell@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules
    # TODO: more

[options]
python_requires = >=3.7
install_requires =
    attrs
    aioredis  # not technically required, but hard to avoid anyway.
# # to consider:
# py_modules = redis_cache_lock
# include_package_data = True

# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#using-a-src-layout
package_dir =
    = src
packages=find:
[options.packages.find]
where=src

[check-manifest]
ignore =
    docker-compose.yml
    tox.ini

[flake8]
ignore = FI58
max_line_length = 100
min_version = 3.7
require_code = True

[mypy]
warn_unused_configs = True
disallow_untyped_defs = True
check_untyped_defs = True
strict_optional = True

[mypy-aioredis.*]
ignore_missing_imports = True

[mypy-pytest.*]
ignore_missing_imports = True

[mypy-tests.*]
disallow_untyped_defs = False
